# bevy_game

./: Cargo.toml  README.md  s.rs
assets/: player.toml
assets/models/: player.dae  player.gltf
assets/scenes/: scene1.glb  scene2.glb
assets/scenes/menu/: menu.glb
src/: .t  main.rs
src/lib/: components.rs  eo.rs  menu.rs  mod.rs  orbit_camera.rs  presence.rs  token.rs  ui.rs
