[package]
name = "kamplud"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.7", features=["jpeg", "dynamic"] }
bevy_obj = "0.7.0"
bevy_rapier3d = { version = "0.14.1", features=["debug-render"] }
bevy_egui = "0.14.0"
iyes_loopless = "0.5.0"
serde_json = "1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
toml = "0.5.9"

[dependencies.bevy-discord-presence]
path = "libs/bevy-discord-rpc"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
