[package]
name = "kamplud"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = "0.10"
bevy_obj = "0.7.0"
bevy_rapier3d = { version = "0.14.1", features=["debug-render"] }
bevy_egui = "0.14.0"
iyes_loopless = "0.5.0"
iyes_progress = { version = "0.3.0", features=["assets", "iyes_loopless"] }
serde_json = "1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
toml = "0.5.9"

[dependencies.bevy-discord-presence]
path = "libs/bevy-discord-rpc"

[dependencies.discord-presence]
path = "libs/discord-presence"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/jpeg",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/mp3"
]

dev = [
    "bevy/dynamic",
]
